tarmac/new_pattern24/kubernetes/applications/mpt/overlays/environments/dev/app-mpt-project-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mpt
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/group.name: mpt
    alb.ingress.kubernetes.io/load-balancer-name: mpt-ingress
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:063890802877:certificate/2391662d-2fa0-4878-b56b-8a8c25444613
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/actions.default: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"404","messageBody":"404 Not Found"}
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0f6915935883512a8, subnet-0cc9b65150f5098ad, subnet-07a5bbe612b865a52
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=devops
    alb.ingress.kubernetes.io/target-type: ip
    # argocd.argoproj.io/hook: PreSync
spec:
  ingressClassName: alb
  rules:
  - host: mpt.cliniciannexus.com
    http:
      paths:
      - backend:
          service:
            name: app-user-api-service
            port:
              name: https
        path: /api/users
        pathType: Prefix
      - backend:
          service:
            name: app-mpt-project-service
            port:
              name: https
        path: /api/projects
        pathType: Prefix
      - backend:
          service:
            name: app-survey-api-service
            port:
              name: https
        path: /api/survey
        pathType: Prefix
      - backend:
          service:
            name: app-incumbent-api-service
            port:
              name: https
        path: /api/files
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:946884638317:certificate/e1a35943-f788-43ce-9bde-4cc783009c8d
    alb.ingress.kubernetes.io/group.name: mpt
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 7350}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=devops
    alb.ingress.kubernetes.io/target-type: ip
  name: app-mpt-project-swagger
spec:
  ingressClassName: alb
  rules:
  - host: api.cliniciannexus.com
    http:
      paths:
      - backend:
          service:
            name: app-mpt-project-service
            port:
              name: https
        path: /swagger
        pathType: Prefix
      - backend:
          service:
            name: app-mpt-project-service
            port:
              name: https
        path: /api/projects
        pathType: Prefix
